--- a/frontend/events.html
+++ b/frontend/events.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <aside class="sidebar" id="sidebar">
+        <div class="close-sidebar">x</div>
         <div class="sidebar-top">
             <div class="sidebar-top-website-info">
                 <img src="assets/logo.jpg" alt="G12Schools logo">
@@ -40,15 +41,20 @@
         </div>
     </aside>
 
-    <div class="sidebar-active" id="sidebar-active">
+    <div>
         <header>
             <div class="header-left">
                 <img src="assets/icons/menu.png" alt="menu icon" id="menu-icon">
                 <div class="header-left-department-info">
                     <img src="assets/logo.jpg" alt="G12 Logo">
-                    <div>
+                    <div class="desktop">
                         <h2>Computer Science Department</h2>
                         <p>School of Information and Communication Technology</p>
+                    </div>
+
+                    <div class="mobile">
+                        <h2>CSC Dept</h2>
+                        <p>School of ICT</p>
                     </div>
                 </div>
             </div>
@@ -118,108 +124,8 @@
         </footer>
     </div>
 
+    <script src="js/sidebar.js"></script>
+    <script src="js/calendar.js"></script>
 
-    <script>
-        const menuIcon = document.getElementById('menu-icon');
-        const sidebar = document.getElementById('sidebar');
-        const sidebarActive = document.getElementById('sidebar-active');
-
-        menuIcon.addEventListener('click', () => {
-        sidebar.classList.toggle('active');
-        sidebarActive.classList.toggle('shift');
-        });
-
-        document.addEventListener('click', (e) => {
-        if (!sidebar.contains(e.target) && !menuIcon.contains(e.target)) {
-            sidebar.classList.remove('active');
-            sidebarActive.classList.remove('shift');
-        }
-        });
-
-
-        const calendarGrid = document.getElementById('calendar-grid');
-        const monthYear = document.getElementById('month-year');
-        const prevMonthBtn = document.getElementById('prev-month');
-        const nextMonthBtn = document.getElementById('next-month');
-
-        let date = new Date();
-        let currentMonth = date.getMonth();
-        let currentYear = date.getFullYear();
-
-        // Example events
-        const events = {
-        "2025-10-01": "Project Submission Deadline",
-        "2025-10-06": "Guest Lecture: AI Ethics",
-        "2025-10-16": "Departmental Dues Payment",
-        };
-
-        function renderCalendar(month, year) {
-        calendarGrid.innerHTML = "";
-
-        const firstDay = new Date(year, month, 1).getDay();
-        const daysInMonth = new Date(year, month + 1, 0).getDate();
-
-        const monthNames = [
-            "January", "February", "March", "April", "May", "June",
-            "July", "August", "September", "October", "November", "December"
-        ];
-
-        monthYear.textContent = `${monthNames[month]} ${year}`;
-
-        // Empty cells before the first day
-        for (let i = 0; i < firstDay; i++) {
-            const emptyCell = document.createElement('div');
-            calendarGrid.appendChild(emptyCell);
-        }
-
-        // Add days
-        for (let day = 1; day <= daysInMonth; day++) {
-            const dayCell = document.createElement('div');
-            dayCell.classList.add('day');
-            dayCell.textContent = day;
-
-            // Highlight today
-            const isToday =
-            day === date.getDate() &&
-            month === date.getMonth() &&
-            year === date.getFullYear();
-
-            if (isToday) dayCell.classList.add('today');
-
-            // Add event if exists
-            const eventKey = `${year}-${String(month + 1).padStart(2, '0')}-${String(day).padStart(2, '0')}`;
-            if (events[eventKey]) {
-            const eventDiv = document.createElement('div');
-            eventDiv.classList.add('event');
-            eventDiv.textContent = events[eventKey];
-            dayCell.appendChild(eventDiv);
-            }
-
-            calendarGrid.appendChild(dayCell);
-        }
-        }
-
-        prevMonthBtn.addEventListener('click', () => {
-        currentMonth--;
-        if (currentMonth < 0) {
-            currentMonth = 11;
-            currentYear--;
-        }
-        renderCalendar(currentMonth, currentYear);
-        });
-
-        nextMonthBtn.addEventListener('click', () => {
-        currentMonth++;
-        if (currentMonth > 11) {
-            currentMonth = 0;
-            currentYear++;
-        }
-        renderCalendar(currentMonth, currentYear);
-        });
-
-        renderCalendar(currentMonth, currentYear);
-
-
-    </script>
 </body>
 </html>
