all other responsiveness, remains admin page

--- a/frontend/timetable.html
+++ b/frontend/timetable.html
@@ -85,12 +85,12 @@
                                 <img src="assets/icons/calendar.png" alt="events icon">
                                 <h4>Class Timetable</h4>
                             </div>
-                            <p>Weekly class schedule and course information</p>
+                            <p>Weekly schedule and course information</p>
                         </div>
 
                         <div class="timetable-options">
                             <button type="button">
-                                <div>Rain Semester 2025</div>
+                                <div>Rain Semester</div>
                                 <img src="assets/icons/dropdown.png" alt="dropdown icon">
                             </button>
                             
