login and header and sidebar features

--- a/frontend/events.html
+++ b/frontend/events.html
@@ -84,7 +84,7 @@
                             <img src="assets/icons/calendar.png" alt="events icon">
                             <h4>Event Calendar</h4>
                         </div>
-                        <p>Departmental events, deadlines, and important dates</p>
+                        <p>Dept. events, deadlines, and important dates</p>
                     </div>
 
                     <div class="event-month-list-toggle">
