--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -75,7 +75,7 @@
                     </a>
                 </div>
 
-                <div class="admin-mode">Admin Mode</div>
+                <div class="admin-mode">Admin</div>
             </div>
         </header>
 
@@ -97,27 +97,27 @@
                     </button>
 
                     <button>
-                        <img src="assets/icons/timetable.png" alt="home icon">
+                        <img src="assets/icons/timetable.png" alt="content icon">
                         <p>Content</p>
                     </button>
 
                     <button>
-                        <img src="assets/icons/timetable.png" alt="home icon">
+                        <img src="assets/icons/calendar.png" alt="timetableicon">
                         <p>Timetable</p>
                     </button>
 
                     <button>
-                        <img src="assets/icons/result.png" alt="home icon">
+                        <img src="assets/icons/result.png" alt="result icon">
                         <p>Results</p>
                     </button>
 
                     <button>
-                        <img src="assets/icons/people.png" alt="home icon">
+                        <img src="assets/icons/people.png" alt="people icon">
                         <p>Analytics</p>
                     </button>
 
                     <button>
-                        <img src="assets/icons/admin.png" alt="home icon">
+                        <img src="assets/icons/admin.png" alt="admin icon">
                         <p>Settings</p>
                     </button>
                 </div>
